--- a/SportsSideKick/app/src/main/res/layout/wall_item_news.xml
+++ b/SportsSideKick/app/src/main/res/layout/wall_item_news.xml
@@ -4,20 +4,21 @@
     android:layout_height="wrap_content">
 
     <RelativeLayout
-        android:id="@+id/row_wall_post_image_container"
+        android:id="@+id/image_container"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
         <ImageView
-            android:id="@+id/row_wall_post_image"
+            android:id="@+id/image"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@drawable/wall_demo_photo"
+            android:scaleType="centerCrop"
+            android:src="@drawable/wall_demo_photo"
             android:adjustViewBounds="true"
             android:layout_centerInParent="true"/>
 
         <ImageView
-            android:id="@+id/row_wall_post_play"
+            android:id="@+id/play_button"
             android:layout_width="62dp"
             android:layout_height="62dp"
             android:layout_centerInParent="true"
@@ -29,10 +30,10 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/row_wall_post_image_container"
+        android:layout_below="@id/image_container"
         android:background="@color/white">
     <TextView
-        android:id="@+id/row_wall_post_description"
+        android:id="@+id/caption"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:maxLines="2"
@@ -45,7 +46,7 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/row_wall_post_description"
+        android:layout_below="@id/caption"
         android:paddingBottom="@dimen/padding_8"
         android:paddingStart="@dimen/padding_8"
         android:paddingEnd="@dimen/padding_8">
@@ -99,7 +100,7 @@
         </LinearLayout>
 
         <TextView
-            android:id="@+id/row_wall_post_name"
+            android:id="@+id/description"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_alignParentStart="true"
