--- a/SportsSideKick/app/src/main/res/layout/wall_item_rumour.xml
+++ b/SportsSideKick/app/src/main/res/layout/wall_item_rumour.xml
@@ -17,10 +17,10 @@
             app:angle="90"
             android:background="@drawable/rumour_headerz"
             android:layout_alignParentTop="true"
-            android:layout_alignBottom="@+id/row_wall_small_cell_info"> <!-- Specify rotate angle here -->
+            android:layout_alignBottom="@+id/description"> <!-- Specify rotate angle here -->
 
             <TextView
-                android:id="@+id/row_wall_small_cell_headline"
+                android:id="@+id/caption"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="center"
@@ -33,7 +33,7 @@
         </com.github.rongi.rotate_layout.layout.RotateLayout>
 
             <TextView
-                android:id="@+id/row_wall_small_cell_info"
+                android:id="@+id/description"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:ellipsize="end"
