--- a/SportsSideKick/app/src/main/res/layout/fragment_news_item.xml
+++ b/SportsSideKick/app/src/main/res/layout/fragment_news_item.xml
@@ -7,8 +7,8 @@
         android:id="@+id/close_news_button"
         android:layout_width="@dimen/standard_button_height"
         android:layout_height="@dimen/standard_button_height"
-        android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
+        android:layout_alignParentTop="true"
         android:background="@drawable/close_button" />
 
     <Button
@@ -22,69 +22,76 @@
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent">
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
 
         <RelativeLayout
-            android:id="@+id/header_container"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_alignParentTop="true">
-
-            <ImageView
-                android:id="@+id/content_image"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_alignParentStart="true"
-                android:layout_alignParentTop="true"
-                android:adjustViewBounds="true"
-                android:scaleType="fitXY" />
+            android:layout_height="match_parent">
 
             <RelativeLayout
+                android:id="@+id/header_container"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_alignParentBottom="true"
-                android:background="@color/black_transparent_154">
+                android:layout_alignParentTop="true">
 
-                <TextView
-                    android:id="@+id/title"
+                <ImageView
+                    android:id="@+id/content_image"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="@dimen/margin_10"
-                    android:layout_marginRight="@dimen/margin_10"
-                    android:layout_marginLeft="@dimen/margin_10"
-                    android:ellipsize="end"
-                    android:maxLines="1"
-                    android:textColor="@color/white"
-                    android:textSize="22sp"
-                    android:textStyle="bold" />
+                    android:layout_alignParentStart="true"
+                    android:layout_alignParentTop="true"
+                    android:adjustViewBounds="true"
+                    android:scaleType="fitXY" />
 
-                <TextView
-                    android:id="@+id/strap"
+                <RelativeLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_below="@id/title"
-                    android:layout_marginRight="@dimen/margin_10"
-                    android:layout_marginLeft="@dimen/margin_10"
-                    android:layout_marginBottom="@dimen/margin_10"
-                    android:ellipsize="end"
-                    android:maxLines="2"
-                    android:textColor="@color/lightGrey"
-                    android:textSize="16sp" />
+                    android:layout_alignParentBottom="true"
+                    android:background="@color/black_transparent_154">
+
+                    <TextView
+                        android:id="@+id/title"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="@dimen/margin_10"
+                        android:layout_marginRight="@dimen/margin_10"
+                        android:layout_marginTop="@dimen/margin_10"
+                        android:ellipsize="end"
+                        android:maxLines="1"
+                        android:textColor="@color/white"
+                        android:textSize="22sp"
+                        android:textStyle="bold" />
+
+                    <TextView
+                        android:id="@+id/strap"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_below="@id/title"
+                        android:layout_marginBottom="@dimen/margin_10"
+                        android:layout_marginLeft="@dimen/margin_10"
+                        android:layout_marginRight="@dimen/margin_10"
+                        android:ellipsize="end"
+                        android:maxLines="2"
+                        android:textColor="@color/lightGrey"
+                        android:textSize="16sp" />
+
+                </RelativeLayout>
 
             </RelativeLayout>
 
+            <TextView
+                android:id="@+id/content_text"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/header_container"
+                android:layout_margin="@dimen/margin_5"
+                android:textColor="@android:color/white" />
+
         </RelativeLayout>
 
-        <TextView
-            android:id="@+id/content_text"
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/commnets_wall"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="@dimen/margin_5"
-            android:layout_below="@id/header_container"
-            android:textColor="@android:color/white" />
+            android:layout_height="wrap_content" />
 
-    </RelativeLayout>
     </ScrollView>
 </RelativeLayout>
