--- a/SportsSideKick/app/src/main/res/layout/fragment_wall.xml
+++ b/SportsSideKick/app/src/main/res/layout/fragment_wall.xml
@@ -2,8 +2,18 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@color/colorAccentLight"
     tools:context="tv.sportssidekick.sportssidekick.fragment.instance.WallFragment">
+
+
+    <com.wang.avi.AVLoadingIndicatorView
+        android:id="@+id/progress_bar"
+        android:layout_width="@dimen/prodgres_bar"
+        android:layout_height="@dimen/prodgres_bar"
+        android:layout_centerInParent="true"
+        android:elevation="2dp"
+        app:indicatorName="LineSpinFadeLoaderIndicator" />
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/fragment_wall_recycler_view"
@@ -34,11 +44,11 @@
                 android:backgroundTint="@color/colorPrimary"
                 android:hint="Write your post here."
                 android:textColor="@color/white"
-                android:layout_toLeftOf="@+id/post_commnent_button"
+                android:layout_toLeftOf="@+id/post_post_button"
                 android:textColorHint="@color/colorPrimarySemiLight" />
 
             <ImageView
-                android:id="@+id/post_commnent_button"
+                android:id="@+id/post_post_button"
                 android:layout_width="60dp"
                 android:layout_height="match_parent"
                 android:layout_centerVertical="true"
@@ -46,7 +56,8 @@
                 android:layout_marginLeft="@dimen/margin_10"
                 android:layout_marginTop="20dp"
                 android:layout_marginBottom="20dp"
-                android:tint="@color/colorPrimarySemiLight" android:layout_alignParentEnd="true"
+                android:tint="@color/colorPrimarySemiLight"
+                android:layout_alignParentEnd="true"
                 android:visibility="visible"/>
 
         </RelativeLayout>
