--- a/SportsSideKick/app/src/main/res/layout/fragment_news_item.xml
+++ b/SportsSideKick/app/src/main/res/layout/fragment_news_item.xml
@@ -42,11 +42,19 @@
                     android:adjustViewBounds="true"
                     android:scaleType="fitXY" />
 
+                <VideoView
+                    android:id="@+id/content_video"
+                    android:layout_width="match_parent"
+                    android:layout_height="500dp"
+                    android:layout_alignParentStart="true"
+                    android:layout_alignParentTop="true"
+                    android:visibility="gone" />
+
                 <RelativeLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_alignParentBottom="true"
-                    android:background="@color/black_transparent_154">
+                    android:background="@color/green_dark_2_semitransparent">
 
                     <TextView
                         android:id="@+id/title"
@@ -86,12 +94,10 @@
                 android:layout_margin="@dimen/margin_5"
                 android:textColor="@android:color/white" />
 
+            <android.support.v7.widget.RecyclerView
+                android:id="@+id/commnets_wall"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
         </RelativeLayout>
-
-        <android.support.v7.widget.RecyclerView
-            android:id="@+id/commnets_wall"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
-
     </ScrollView>
 </RelativeLayout>
