--- a/SportsSideKick/app/src/main/res/layout/fragment_chat.xml
+++ b/SportsSideKick/app/src/main/res/layout/fragment_chat.xml
@@ -77,11 +77,6 @@
         android:layout_below="@+id/chat_info_line"
         android:layout_above="@+id/input_container">
 
-        <android.support.v7.widget.RecyclerView
-            android:id="@+id/message_container"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent" />
-
     </android.support.v4.widget.SwipeRefreshLayout>
 
     <com.wang.avi.AVLoadingIndicatorView
@@ -141,43 +136,63 @@
         android:layout_height="@dimen/standard_button_height"
         android:layout_alignParentBottom="true"
         android:layout_alignParentStart="true"
-        android:background="@color/green_dark_1">
+        android:background="@color/green_dark_1"
+        android:animateLayoutChanges="true">
 
-        <Button
+        <RelativeLayout
+            android:id="@+id/chat_buttons_container"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:visibility="gone"
+            android:background="@color/chat_input_edit_text_background"
+            android:animateLayoutChanges="true" >
+
+        <ImageButton
             android:id="@+id/mic_button"
-            android:layout_width="@dimen/chat_button_message_size"
-            android:layout_height="@dimen/chat_button_message_size"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_alignParentStart="true"
             android:layout_centerVertical="true"
-            android:background="@drawable/button_voice"
-            android:visibility="gone"/>
+            android:src="@drawable/chat_mic_selector"
+            android:background="@null"
+            android:cropToPadding="true"/>
 
-        <Button
+        <ImageButton
             android:id="@+id/cam_button"
-            android:layout_width="@dimen/chat_button_message_size"
-            android:layout_height="@dimen/chat_button_message_size"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_centerVertical="true"
             android:layout_toEndOf="@+id/mic_button"
-            android:background="@drawable/button_camera"
-            android:visibility="gone"/>
+            android:src="@drawable/chat_button_camera"
+            android:background="@null" />
 
-        <Button
+        <ImageButton
             android:id="@+id/pic_button"
-            android:layout_width="@dimen/chat_button_message_size"
-            android:layout_height="@dimen/chat_button_message_size"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_centerVertical="true"
             android:layout_toEndOf="@id/cam_button"
-            android:background="@drawable/button_image"
-            android:visibility="gone"/>
+            android:src="@drawable/chat_button_image"
+            android:background="@null"/>
 
-        <Button
+        <ImageButton
             android:id="@+id/vid_button"
-            android:layout_width="@dimen/chat_button_message_size"
-            android:layout_height="@dimen/chat_button_message_size"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_centerVertical="true"
             android:layout_toEndOf="@id/pic_button"
-            android:background="@drawable/button_image"
-            android:visibility="gone"/>
+            android:src="@drawable/button_image"
+            android:background="@null"
+            android:visibility="gone" />
+
+            <View
+                android:id="@+id/chat_menu_divider"
+                android:layout_width="3dp"
+                android:layout_height="match_parent"
+                android:layout_toEndOf="@+id/pic_button"
+                android:background="@color/white"/>
+
+        </RelativeLayout>
 
         <ImageButton
             android:id="@+id/menu_button"
@@ -185,18 +200,19 @@
             android:layout_height="wrap_content"
             android:src="@drawable/chat_add_menu_button"
             android:background="@null"
-            android:layout_centerVertical="true"/>
+            android:layout_centerVertical="true"
+            android:layout_toEndOf="@+id/chat_buttons_container" />
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_toEndOf="@+id/menu_button"
-        android:layout_toStartOf="@+id/chat_menu">
+        android:layout_toStartOf="@+id/chat_menu_dots"
+        android:animateLayoutChanges="true">
         <EditText
             android:id="@+id/input_edit_text"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-
             android:background="@color/chat_input_edit_text_background"
             android:gravity="start|center_vertical"
             android:hint="Enter your message here..."
@@ -205,7 +221,8 @@
             android:padding="@dimen/padding_8"
             android:textColor="@color/colorPrimary"
             android:textColorHint="@color/colorPrimarySemiLight"
-            android:textSize="10sp" />
+            android:textSize="10sp"
+            android:animateLayoutChanges="true"/>
 
         <Button
             android:id="@+id/messenger_send_button"
@@ -218,13 +235,70 @@
     </RelativeLayout>
 
         <ImageButton
-            android:id="@+id/chat_menu"
+            android:id="@+id/chat_menu_dots"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:src="@drawable/chat_menu_button"
             android:background="@null"
             android:layout_centerVertical="true"
-            android:layout_alignParentEnd="true"/>
+            android:layout_alignParentEnd="true" />
+
+        <LinearLayout
+            android:id="@+id/chat_menu_dots_container"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:weightSum="0.9"
+            android:layout_toStartOf="@+id/chat_menu_dots"
+            android:gravity="center"
+            android:background="@color/chat_input_edit_text_background"
+            android:padding="@dimen/half_margin"
+            android:visibility="gone"
+            android:animateLayoutChanges="true">
+
+            <TextView
+                android:id="@+id/chat_menu_create"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Create"
+                android:gravity="center"
+                android:layout_gravity="center"
+                android:layout_weight="0.3"
+                android:padding="@dimen/half_margin"
+                android:background="@drawable/textview_round_border"
+                android:textColor="@color/white"
+                android:layout_marginStart="@dimen/margin_20"
+                android:layout_marginEnd="@dimen/margin_10"/>
+
+            <TextView
+                android:id="@+id/chat_menu_edit"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Edit"
+                android:gravity="center"
+                android:layout_weight="0.3"
+                android:padding="@dimen/half_margin"
+                android:background="@drawable/textview_round_border"
+                android:textColor="@color/white"
+                android:layout_marginStart="@dimen/margin_10"
+                android:layout_marginEnd="@dimen/margin_10"
+                android:layout_gravity="center"/>
+
+            <TextView
+                android:id="@+id/chat_menu_search"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Search"
+                android:gravity="center"
+                android:layout_weight="0.3"
+                android:padding="@dimen/half_margin"
+                android:background="@drawable/textview_round_border"
+                android:textColor="@color/white"
+                android:layout_marginStart="@dimen/margin_10"
+                android:layout_marginEnd="@dimen/margin_20"
+                android:layout_gravity="center"/>
+
+        </LinearLayout>
+
     </RelativeLayout>
 
     <!-- Container that appears when grid layout is visible -->
@@ -252,5 +326,13 @@
             android:text="Create or join chat"
             android:textColor="@color/white" />
     </RelativeLayout>
+
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/message_container"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_alignParentStart="true"
+        android:layout_alignTop="@+id/swipe_refresh_layout"
+        android:layout_above="@+id/input_container" />
 
 </RelativeLayout>
