--- a/SportsSideKick/app/src/main/res/layout/wall_item_user_post_new.xml
+++ b/SportsSideKick/app/src/main/res/layout/wall_item_user_post_new.xml
@@ -2,6 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="230dp"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@color/green_dark_2">
 
     <RelativeLayout
@@ -25,7 +26,7 @@
             android:layout_centerHorizontal="true"
             android:visibility="visible"/>
 
-        <ImageView
+        <de.hdodenhof.circleimageview.CircleImageView
             android:id="@+id/user_image"
             android:layout_width="60dp"
             android:layout_height="60dp"
@@ -33,7 +34,9 @@
             android:layout_marginStart="10dp"
             android:src="@drawable/blank_profile_rounded"
             android:layout_alignParentTop="true"
-            android:layout_alignParentStart="true" />
+            android:layout_alignParentStart="true"
+            app:civ_border_width="2dp"
+            app:civ_border_color="@color/colorPrimaryLight"/>
 
         <ImageView
             android:id="@+id/play_button"
