--- a/SportsSideKick/app/src/main/res/values/colors.xml
+++ b/SportsSideKick/app/src/main/res/values/colors.xml
@@ -6,6 +6,7 @@
     <color name="colorPrimarySemiLight">#266263</color>
     <color name="colorPrimaryLight">#00ab8d</color>
 
+    <color name="green_dark_3">#032227</color>
     <color name="green_dark_1">#215456</color>
     <color name="light_green_1_semitransparent">#a8215456</color>
     <color name="green_dark_2">#00363b</color>
