--- a/SportsSideKick/app/src/main/res/layout/popup_join_chat.xml
+++ b/SportsSideKick/app/src/main/res/layout/popup_join_chat.xml
@@ -4,19 +4,43 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_gravity="center"
-    android:layout_marginBottom="@dimen/margin_30"
-    android:layout_marginEnd="@dimen/margin_60"
-    android:layout_marginStart="@dimen/margin_60"
-    android:layout_marginTop="@dimen/margin_30"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:background="@color/green_dark_2">
+
+    <RelativeLayout
+        android:id="@+id/chat_headline_container"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/standard_button_height">
+
+        <ImageButton
+            android:id="@+id/chat_join_headline_close_fragment"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentStart="true"
+            android:layout_centerVertical="true"
+            android:src="@drawable/ic_close"
+            android:tint="@color/colorPrimaryLight"
+            android:background="@null"/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Chat"
+            android:textColor="@color/white"
+            android:gravity="center"
+            android:layout_centerHorizontal="true"
+            android:layout_centerVertical="true"
+            android:padding="@dimen/padding_8"/>
+
+    </RelativeLayout>
 
     <RelativeLayout
         android:id="@+id/chat_top_container"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_above="@+id/bottom_split_line"
-        android:layout_alignParentTop="true"
-        android:background="@color/colorPrimarySemiLight">
+        android:background="@color/colorPrimarySemiLight"
+        android:layout_below="@+id/chat_headline_container"
+        android:layout_above="@+id/bottom_public_chats_container">
 
         <View
             android:id="@+id/top_vertical_spliter"
@@ -29,7 +53,7 @@
             android:layout_width="match_parent"
             android:layout_height="@dimen/standard_button_height"
             android:layout_toStartOf="@+id/top_vertical_spliter"
-            android:background="@color/colorAccentLight"
+            android:background="@color/green_dark_3"
             android:gravity="center"
             android:text="Create Chat"
             android:textColor="@color/white_semitransparent" />
@@ -75,13 +99,37 @@
             android:text="Public Chats"
             android:textColor="@color/white" />
 
+        <EditText
+            android:id="@+id/chat_name_edit_text"
+            android:layout_width="match_parent"
+            android:layout_height="60dp"
+            android:layout_below="@+id/top_vertical_spliter"
+            android:background="@color/green_dark_2"
+            android:gravity="start|center_vertical"
+            android:hint="Enter a name for your chat"
+            android:imeOptions="flagNoExtractUi"
+            android:maxLines="1"
+            android:textColor="@color/white"
+            android:textColorHint="@color/white_semitransparent"
+            android:textSize="14sp"
+            android:padding="@dimen/margin_20"
+            android:layout_toStartOf="@+id/chat_join_search_button"
+            android:layout_marginBottom="@dimen/margin_10"/>
+
+        <ImageButton
+            android:layout_width="@dimen/create_chat_name_label_height"
+            android:layout_height="@dimen/create_chat_name_label_height"
+            android:layout_alignParentEnd="true"
+            android:src="@drawable/ic_search"
+            android:background="@color/colorPrimaryLight"
+            android:layout_below="@+id/top_vertical_spliter"
+            android:id="@+id/chat_join_search_button" />
+
         <android.support.v4.widget.SwipeRefreshLayout
             android:id="@+id/swipe_refresh_layout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/caption_label"
-            android:layout_marginEnd="@dimen/margin_20"
-            android:layout_marginStart="@dimen/margin_20">
+            android:layout_below="@+id/chat_name_edit_text">
 
             <tv.sportssidekick.sportssidekick.util.AutofitRecyclerView
                 android:id="@+id/friends_recycler_view"
@@ -92,47 +140,31 @@
 
     </RelativeLayout>
 
-    <View
-        android:id="@+id/bottom_split_line"
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:layout_above="@+id/bottom_buttons_container"
-        android:background="@android:color/black" />
 
     <RelativeLayout
-        android:id="@+id/bottom_buttons_container"
-        android:layout_width="wrap_content"
-        android:layout_height="@dimen/popup_language_bottom_buttons_container_height"
+        android:id="@+id/bottom_public_chats_container"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:minHeight="@dimen/margin_90"
         android:layout_alignParentBottom="true"
-        android:background="@drawable/popup_bottom_background">
+        android:background="@color/green_dark_2">
 
-        <EditText
-            android:id="@+id/search_edit_text"
-            android:layout_width="@dimen/popup_join_chat_search_edit_text_width"
-            android:layout_height="@dimen/popup_join_chat_search_edit_text_height"
-            android:background="@drawable/popup_bottom_left_background"
-            android:gravity="start|center_vertical"
-            android:hint="Search for a chat"
-            android:imeOptions="flagNoExtractUi|actionSearch"
-            android:inputType="text"
-            android:lines="1"
-            android:maxLines="1"
-            android:paddingStart="@dimen/padding_40"
-            android:textColor="@color/white"
-            android:textColorHint="@color/white_semitransparent"
-            android:textSize="14sp" />
-
-        <ImageButton
-            android:id="@+id/confirm_button"
+        <TextView
+            android:id="@+id/bottom_public_chats_headline"
             android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_alignParentEnd="true"
-            android:layout_centerVertical="true"
-            android:layout_marginBottom="@dimen/margin_30"
-            android:layout_marginEnd="@dimen/margin_20"
-            android:layout_marginStart="@dimen/margin_30"
-            android:background="@null"
-            android:scaleType="centerInside"
-            android:src="@drawable/popup_confirmation_button" />
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:text="Public Chats your friends are in"
+            android:textColor="@color/white"
+            android:layout_centerHorizontal="true"
+            android:layout_marginBottom="@dimen/margin_10"
+            android:padding="@dimen/padding_8"/>
+
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/bottom_public_chats_friends_in_recycler"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/bottom_public_chats_headline"/>
+
     </RelativeLayout>
 </RelativeLayout>
