--- a/SportsSideKick/app/src/main/res/layout/fragment_news_item.xml
+++ b/SportsSideKick/app/src/main/res/layout/fragment_news_item.xml
@@ -17,11 +17,13 @@
         android:layout_height="@dimen/standard_button_height"
         android:layout_alignParentBottom="true"
         android:layout_alignParentEnd="true"
-        android:background="@drawable/share_to_wall" />
+        android:background="@drawable/share_to_wall"
+        android:visibility="gone" />
 
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:layout_above="@+id/post_container">
 
         <RelativeLayout
             android:layout_width="match_parent"
@@ -33,22 +35,26 @@
                 android:layout_height="wrap_content"
                 android:layout_alignParentTop="true">
 
-                <ImageView
-                    android:id="@+id/content_image"
+                <RelativeLayout
+                    android:id="@+id/media_container"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_alignParentStart="true"
-                    android:layout_alignParentTop="true"
-                    android:adjustViewBounds="true"
-                    android:scaleType="fitXY" />
+                    android:layout_alignParentTop="true">
 
-                <VideoView
-                    android:id="@+id/content_video"
-                    android:layout_width="match_parent"
-                    android:layout_height="500dp"
-                    android:layout_alignParentStart="true"
-                    android:layout_alignParentTop="true"
-                    android:visibility="gone" />
+                    <ImageView
+                        android:id="@+id/content_image"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:adjustViewBounds="true"
+                        android:scaleType="fitXY" />
+
+                    <VideoView
+                        android:id="@+id/content_video"
+                        android:layout_width="match_parent"
+                        android:layout_height="500dp"
+                        android:visibility="gone" />
+                </RelativeLayout>
 
                 <RelativeLayout
                     android:layout_width="match_parent"
@@ -86,18 +92,71 @@
 
             </RelativeLayout>
 
+            <View
+                android:id="@+id/top_horizontal_split_line"
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:background="@color/green_dark_2"
+                android:layout_below="@id/header_container"/>
+
             <TextView
                 android:id="@+id/content_text"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_below="@id/header_container"
-                android:layout_margin="@dimen/margin_5"
+                android:layout_below="@id/top_horizontal_split_line"
+                android:layout_margin="@dimen/margin_20"
                 android:textColor="@android:color/white" />
+
+            <View
+                android:id="@+id/bottom_horizontal_split_line"
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:background="@color/green_dark_2"
+                android:layout_below="@id/content_text"/>
 
             <android.support.v7.widget.RecyclerView
                 android:id="@+id/commnets_wall"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
+                android:layout_height="wrap_content"
+                android:layout_alignParentBottom="true"
+                android:layout_marginTop="@dimen/margin_20"
+                android:layout_below="@id/bottom_horizontal_split_line" />
         </RelativeLayout>
     </ScrollView>
+
+    <RelativeLayout
+        android:id="@+id/post_container"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:background="@color/colorPrimary"
+        android:visibility="gone">
+
+        <EditText
+            android:id="@+id/post_text"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:layout_margin="@dimen/margin_20"
+            android:layout_toEndOf="@+id/uploaded_image"
+            android:layout_toStartOf="@+id/post_post_button"
+            android:backgroundTint="@color/colorPrimary"
+            android:hint="Write your post here."
+            android:textColor="@color/white"
+            android:textColorHint="@color/lightGrey" />
+
+        <ImageView
+            android:id="@+id/post_post_button"
+            android:layout_width="40dp"
+            android:layout_height="wrap_content"
+            android:layout_alignParentEnd="true"
+            android:layout_centerVertical="true"
+            android:layout_marginBottom="10dp"
+            android:layout_marginEnd="@dimen/margin_20"
+            android:layout_marginTop="10dp"
+            android:adjustViewBounds="true"
+            android:src="@drawable/btn_send"
+            android:tint="@color/white"
+            android:visibility="gone" />
+    </RelativeLayout>
 </RelativeLayout>
